--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,10 @@ repositories {
 
 dependencies {
 
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'2.1.3.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version:'2.1.3.RELEASE'
-    compile group: 'com.auth0', name: 'java-jwt', version:'3.8.1'
-    compile group: 'org.json', name: 'json', version:'20180813'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'2.1.3.RELEASE'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version:'2.1.3.RELEASE'
+    implementation group: 'com.auth0', name: 'java-jwt', version:'3.8.1'
+    implementation group: 'org.json', name: 'json', version:'20180813'
     runtimeOnly 'org.hsqldb:hsqldb'
    
 
